--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dj-database-url==2.1.0
 Django==4.2.6
 django-crispy-forms==2.1
 django-heroku==0.3.1
+environ==1.0
 fabio==2023.6.0
 fonttools==4.43.1
 gunicorn==21.2.0
@@ -23,6 +24,8 @@ PyQt5==5.15.10
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.13.0
 python-dateutil==2.8.2
+python-decouple==3.8
+python-dotenv==1.0.0
 silx==1.1.2
 six==1.16.0
 sqlparse==0.4.4
